--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kp-dev-org/ts-packages",
-  "version": "1.0.2",
+  "name": "kp-ts-utilities",
+  "version": "1.0.3",
   "description": "TypeScript package for interfaces, abstract classes, and validation schemes.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ioredis": "^5.7.0"
   },
   "devDependencies": {
     "@types/node": "^24.3.3"
