--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "TypeScript package for interfaces, abstract classes, and validation schemes.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist",
     "src"
