--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "composite": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "target": "ES2019",
     "moduleResolution": "Node",
     "esModuleInterop": true,
